2009-10-22  Donal K. Fellows  <dkf@users.sf.net>

	* library/xmfbox.tcl (MotifFDialog_FileTypes)
	(MotifFDialog_ActivateSEnt): 
	* library/tkfbox.tcl (Done, ::tk::dialog::file::): 
	* macosx/tkMacOSXDialog.c (Tk_GetOpenFileObjCmd): 
	* win/tkWinDialog.c (GetFileNameW, GetFileNameA): 
	* doc/getOpenFile.n: [Patch 2168768]: Corrected handling of the
	-typevariable option to be consistently global; it's the only way it
	can work even close to the same on all platforms.

2009-10-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Relax the runtime version requirements on Tcl
	* generic/tkMain.c:	so that Tk 8.5.8 can [load] into Tcl 8.6 (and
	* generic/tkWindow.c:	later 8.*) interps.  [Feature Request 2794032]
	* library/tk.tcl
	* unix/Makefile.in:
	* win/Makefile.in:
	* win/makefile.vc:

2009-10-10  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (InitFont,TkpGetFontFromAttributes,Tk_DrawChars):
	[Bug 1961455]: Draw underlines and overstrikes when using Xft for font
	rendering.

2009-10-08  Donal K. Fellows  <dkf@users.sf.net>

	* library/tkfbox.tcl (::tk::IconList_Create): [Patch 2870648]:
	Corrected cursor used in file/directory dialogs.

2009-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/vistaTheme.tcl: [Bug 2787164]: Fix size of dropdown
	arrow on combobox and menubutton for Windows 7.

2009-10-07  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixScrlbr.c (TkpComputeScrollbarGeometry): [Patch 2088597]:
	Stop scrollbars from getting too small at the end.

2009-10-05  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updated for 8.5.8 release.

2009-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinButton.c: [Bug 2860827]: Backported patch avoiding 3D
	effects with user-specified background.

2009-09-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (ImgGetPhoto): Correct generation of grayscale
	data from an image. Reported by Keith Vetter on comp.lang.tcl.
